tooling/nargo_cli/tests/snapshots/execution_success/wildcard_type/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "enable",
        "type": {
          "kind": "array",
          "length": 2,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 4,
        "type": {
          "kind": "field"
        }
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _5",
    "private parameters indices : [_0, _1]",
    "public parameters indices : []",
    "return value indices : [_2, _3, _4, _5]",
    "EXPR [ (-1, _1) (1, _2) 0 ]",
    "EXPR [ (-1, _1) (1, _3) -7 ]",
    "EXPR [ (-1, _1) (1, _4) -3 ]",
    "EXPR [ (-1, _1) (1, _5) 1 ]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
