tooling/nargo_cli/tests/snapshots/execution_success/wildcard_type/execute__tests__force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "enable",
        "type": {
          "kind": "array",
          "length": 2,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 4,
        "type": {
          "kind": "field"
        }
      },
      "visibility": "public"
    },
    "error_types": {
      "12049594436772143978": {
        "error_kind": "string",
        "string": "array ref-count underflow detected"
      },
      "14225679739041873922": {
        "error_kind": "string",
        "string": "Index out of bounds"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/9VaS4/jRBAuJ3bix0QTwQEJpJW4gcTBeW3mGInhiIS4c8hkmD/ABW7+5zC9dMWfP1c83kn37mxJUdtd5Xp39SOdyP+QPf8S/5z6NoF2Il1Q3MG39XWwCsirjqVjElBH9K362/l46t8zgU42SF76CGi/8w8F8Uv8d4dAzilIbkj+d/X2oZAuBNZ/U0g30QPzXxfAMwL/eu75/NK0/NkWzYNEosVpF9nO9UL6BSkh29JIOZKQPCE7heSXEjWnVgnJU33YP/q8UJqm1SchXNr07VBc1nTtcJA//94BHefWBOh+hOefpKvDxLAhMWyImV/P+buPnENbKwYcn7TpykYcxiAFf74j/8TIOfRPpPG9/Vou1y7Nh3kjZ5iSP9FH6rMc6QlXAC5tunJK/56CHOSlemRE/4N/v/XtDL7R75eG/BnJ7+ht9KGPmNfU6FP62fPve/9cSbs2+Llp+YWcm5T/PfCXcPxXzgY3Bv5Sm6WbNwFl1VrjsOby/JNJFD/uxs4/53yUqLXsPP9kpA/7B+ubw80MXZcGDm1DHMqZGXK+RF4L6edscqEV6cfdkoM0Go/I89t6yCfWGulW+mNmRrrO4ui6V5/PpQ+Ky0E26sgwpXfU2/H4B/gyHctEP+Xki0i1ZRXZ11vlP4/Df2PtC3Q+czb9CnLRr5n018zoh4zof5eW52/++Vb6cdN8qAyZkwsy56Qj7nmnMpyP7lca9FZ90P7KoC+BpiD7UHZFONz/c84iz5DrCrYjfcGOCdGzDzLq+8O3zp5/pes7KzbYx7U4N/SZGvrwmo55Mz3GuQI7rO/SC3Y+gp2TpGvnjfTtzA07lX5h0N8Ytt8atiwIl5OdIvYeFvPNQdp0vzv4/vo62Dk5WdLqwTHPmq4vLN9ZOTLWd5xTC8BVhMO5vyA5uSEHddG6sjBw+i3W1Jh+39+1h6Uac81vhhTwSP+3f8eaoG16hZ5P++PqaXN8Ou6Oj4/b0/Er4i/gu0t7FB7vh1fqwjC0noy8Bhy9T+FzskhnCoPnZFMjVuq7zNB1STgH901Lx7ip0Tf5BLw4t0Lx4txxcPBtfR2sxNBJdReSy3tJkX5+x1prjs1vlV+SrrHye076sH84v3NDV2u9ktCzNX9YawKLF88t1n9WkeO3e238Yu29huJnjc+PiZ+D+6aluzZ+XFPeGi/OHQcH39bXwVoMnXh8zOPrsVdZxQg9rDMOHmeR9mej66TKLyXquD+PM2ufjP7hcVYZui4NHNdMa39dGXIsXgXpwDkn0saviOOv0XVS5ZeGH2LEb+hcBP2qvrPOApbSz4X7pqW7lCelIScmL6tOhtCLc8fBwbf1dbARQy7XJ5UbUY+dyqpG6GHt53mc4V78c9RJlV9K1HF/Hmdjzy/UdwtDV+usAnMbcShnYcgZOvfgsa54kTZ+VRx/ja6TKr+UqPPuamj+seqE+u7G0HVp4LgeWXlyY8j5EnnxOY2Dg2/r62Crsobq04RwbCPS8t44oW/Rnrd2RyqJo8/g2Q/qODQW+OzHGichc+4z3nF7fG383tIdN44Lx4/nAX2+VDPHrtlngXg5wLs41+qVBdLLPc8D8QptY4y911uzsQykl34fghfaOHT/s5Lw/78c95u703p72j/sNsfN+xf/fwkt/7R7/3Da7o71nyv3un5JvnUfEP/HdKB3CvHOIdIrv4zoC8/A1aDKP/OdUZTn6L4doEsutB94GH1p0+2z7iLiHU2lV9ll09dRcRXgMpJz49/RX8hL9ciI/hvPQGOC9yr1+6UhPyf5Hb2NPv5/rzLoK4PexWfpP9K8RdtDz7EfZBJ/7GPdNHdcXv8H0dLM0kU0AAA=",
  "debug_symbols": "pZbbattAEIbfRde60O7M7CGvEkJwHCUYjG0Uu1CC3707mvmVtFAo2xt/nw/zyYddS5/D6/xye38+nN7OH8PD4+fwshyOx8P78/G8310P51N79HOY9IZleAjjwMmQDcVQV8hkCIZoIAMbrCJWEauIVcQqySrJKqlVYgMZ2NAq1JAM2VAMdUWeDMHQXsLjUNqD0tCaqYEMbBBDMmRDMdQVdTIEg1WqVapVaqvkhmTIhmKoK8LUMkUZnNFJzpaqSnEmZ3YWZzWGyRmc0Rjj+mlDJCc7xZmc2Vmc1UiTMzi9R94j75H3SH/USSVDCqS68AQJkAghCEMEgvK67IJKgVSXdfGtEiARQhCGCCRBUBaUBeV1QUaVANEyqRCEIQJJkAwpkOqii9QkQFDOWmYVhggkQTKkQKqLrnSTAIkQlAvKBWVd/EF/Sl3+JlpOKtVFN4FJgEQIQRgikATJEJR1W4S2L6LuC5MAiRCCMEQgCZIhBYJyQDmgrHskFBWCaLmqCCRBMqRAqkucIAESIQTRP61JRSAJkiEFUl1095kESIQQBGVCmVAmlAllQplRZpQZZUaZUWaUGWVGmVFmlAVlQVnW8v0+DjijPF+XedYTyrdTTDvxXHbLfLoOD6fb8TgOP3bH2/qij8vutPK6W9qzLTmfXhtb8O1wnNXu49f09PfR9m/iw+3vZBuXf5/PCfNFuubjNt9z/Lb0fb6t/Z55wfuPKfbMx4J56pqnbZ7p/47P3DMfts8fe74/SuTzlErP/LZ+KOeOeabq89z1+ZlxfJbQMy/b8dPUMS8Rm1e6vn+JGfNd6094Oz73fP607b801Z55vZaw+dCz/1Pcjv/H9/fU7u32h+W3i/a7lpbD7uU4+92322n/7dnrzwuewUX/ZTnv59fbMmvp68q/3TzGFMZY4tM4tDPEI00jT096CdruhHahEOJ6N+grRcYo+emub+wX",
  "file_map": {
    "50": {
      "source": "struct bar {\n    enable: [bool; 4],\n    data: [Field; 2],\n    pad: u32,\n}\n\nfn main(enable: [Field; 2]) -> pub [Field; 4] {\n    let mut result = [0; 4];\n    let a: [_; 4] = foo(enable[1]);\n    for i in 0..4 {\n        result[i] = a[i].data[i % 2];\n    }\n    result\n}\n\nfn foo(x: Field) -> [bar; 4] {\n    [\n        bar { enable: [true, true, false, false], data: [x, x + 1], pad: 0 },\n        bar { enable: [true, false, false, false], data: [x + 2, x + 7], pad: 0 },\n        bar { enable: [true, true, false, true], data: [x + 3, x + 5], pad: 0 },\n        bar { enable: [false, false, false, false], data: [x + 4, x - 1], pad: 0 },\n    ]\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
