tooling/nargo_cli/tests/snapshots/execution_success/wildcard_type/execute__tests__force_brillig_true_inliner_9223372036854775807_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: true
exit_code: 0
----- stdout -----
[wildcard_type] Circuit output: Vec([Field(7), Field(14), Field(10), Field(6)])
----- stderr -----
